[bumpversion]
current_version = 0.28.0
commit = True
tag = False
tag_name = {new_version}

[bumpversion:file:async_upnp_client/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[metadata]
name = async_upnp_client
version = attr: async_upnp_client.__version__
description = Async UPnP Client
long_description = file: README.rst
url = https://github.com/StevenLooman/async_upnp_client
project_urls = 
	GitHub: repo = https://github.com/StevenLooman/async_upnp_client
author = Steven Looman
author_email = steven.looman@gmail.com
license = Apache 2
license_file = LICENSE.md
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: Apache Software License
	Framework :: AsyncIO
	Operating System :: POSIX
	Operating System :: MacOS :: MacOS X
	Operating System :: Microsoft :: Windows
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
keywords = 
	ssdp
	Simple Service Discovery Protocol
	upnp
	Universal Plug and Play

[options]
python_requires = >=3.7
install_requires = 
	voluptuous >= 0.12.1
	aiohttp >= 3.7.4
	async-timeout >=3.0, <5.0
	python-didl-lite ~= 1.3.2
	defusedxml >= 0.6.0
tests_require = 
	pytest ~= 6.2.4
	pytest-asyncio ~= 0.15.1
	pytest-cov ~= 2.12.1
	coverage ~= 5.5
	asyncmock ~= 0.4.2
packages = 
	async_upnp_client
	async_upnp_client.profiles

[options.entry_points]
console_scripts = 
	upnp-client = async_upnp_client.cli:main

[options.package_data]
async-upnp-client = py.typed

[bdist_wheel]
python-tag = py3

[flake8]
exclude = .venv,.git,.tox,docs,venv,bin,lib,deps,build
max-line-length = 119
max-complexity = 25
ignore = 
	E501,
	W503,
	E203,
	D202,
	W504
noqa-require-code = True

[mypy]
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[codespell]
ignore-words-list = wan

[pylint.SIMILARITIES]
min-similarity-lines = 8

[coverage:run]
source = async_upnp_client
omit = 
	async_upnp_client/aiohttp.py
	async_upnp_client/cli.py
